--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ Green Text: #44544e;
 						/* General*/
 		/**********************************************/
 
-body,h1,h2,h3,h4,p,a{
+body,h1,h2,h3,h4,p,a, li{
 	font-family: ‘Muli’, ‘Lucida Grande’, sans-serif;
 	font-weight: 300;
 	color: #43352f;
@@ -47,8 +47,8 @@ html{
 	height: 100%;
 }
 body{
+	width: 380%;
 	height: 100%;
-	text-align: center;
 }
 p{
 	font-size: 12px;
@@ -70,21 +70,15 @@ a:active{
 	color: #44544e;
 }
 
-#wrapper_table {
-	width: 380%;
-	height: 100%;
-	
-}
-#container {
-	height: 100%;
+.main{
+	width: inherit;
+	height: inherit;
 }
 
-#wrapper_table tbody{
-	
-	height: 100%;
-	
+.containor{
+	width: inherit;
+	height: inherit;
 }
-
 .hidden{
 	visibility: hidden;
 	display: none;
@@ -94,31 +88,38 @@ a:active{
 /****** Sections ******/
 
 .section{
-	
-	width:25% !important;
-	height: 45%;
-	
-	
-}
-.section table{
+	height: inherit;
+	width:25%;
 	position: relative;
-}
-.sec_table{
+	float:left;
+	
 
+}
+/****** Part ******/
+
+.part{
+	float:left;
+	
+}
+
+.part-lg-qh{
+	width:25%;
+	height: 50%;
+}
+.part-lg-hh{
+	width:50%;
+	height: 50%;
+}
+
+.part-lg-fh{
 	width:100%;
-	
-	
+	height: 50%;
 }
 
-.sec_table .section table{
-	
-	right: 30%;
-}
 
-.sec_table tr td:first-child table{
-	right: 0;
-}
-/********    Top Navigation ****/
+
+
+/********    Top Navigation   *******/
 
 #top_nav{
 	position: fixed;
