--- a/style.css
+++ b/style.css
@@ -99,6 +99,37 @@ a:active{
 	visibility: hidden;
 }
 
+.text-center{
+	text-align: center;
+}
+
+/*********************** Animations ****************/
+.animate-enter,
+.animate-leave
+{
+-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+position: relative;
+display: block;
+}
+ 
+.animate-enter.animate-enter-active,
+.animate-leave {
+opacity: 1;
+top: 0;
+height: 30px;
+}
+ 
+.animate-leave.animate-leave-active,
+.animate-enter {
+opacity: 0;
+top: -50px;
+height: 0px;
+}
+
 
 
 
@@ -115,6 +146,9 @@ a:active{
 }
 /****** Part ******/
 
+.section .part{
+	padding-top: 3%;
+}
 .part{
 	float:left;
 	
@@ -138,6 +172,17 @@ a:active{
 	height: 50%;
 }
 
+.part-spleft{
+	padding-left: 2%;
+}
+.part-mpleft{
+	padding-left: 10%;
+}
+
+
+.part-noptop{
+	padding-top:0;
+}
 /************* LIne ******/
 
 .line{
@@ -206,14 +251,20 @@ a:active{
 		/**********************************************/
 
 .website-title{
-	padding-left: 1%;
-	padding-top: 3%;
+	padding-left: 6%;
+	padding-top: 2%;
 }
 
+.website-title-rel{
+	position: relative;
+	left: 50%;
+	top: 30%;
+}
 
-#quotes{
-	visibility: hidden;
-	display: none;
+.quotes-rel{
+	position: relative;
+	right: 60%;
+	top: 30%;
 }
 
 
