--- a/style.css
+++ b/style.css
@@ -230,8 +230,9 @@ height: 0px;
 	display: inline;
 }
 .navitem{
-	width: 10px;
-	height: 10px;
+	height: 20px;
+	z-index: 100;
+	position: relative;
 }
 
 
