--- a/lla_style.css
+++ b/lla_style.css
@@ -50,11 +50,11 @@ html{
 }
 body{
 	width: 380%;
-	height: 100%;
+	height: inherit;
 	margin: 0;
 	padding: 0;
 	overflow-y: hidden;
-
+	overflow-x: scroll;
 }
 p{
 	font-size: 12px;
@@ -175,7 +175,7 @@ height: 0px;
 
 .section{
 	margin-top: 1%;
-	height: 99%;
+	height: 98%;
 	width:25%;
 	position: relative;
 	float:left;
