--- a/lla_style.css
+++ b/lla_style.css
@@ -15,8 +15,10 @@ This theme, like WordPress, is licensed under the GPL.
 
 
 Color Codes 
-Brown Text: #43352f;
-Green Text: #44544e;
+Brown Text: #54372A;
+Mint text: #2A4754
+orange
+	color: #BF4324;
 */
 
 /* Inital css for the index.html for lifeline arts */
@@ -32,14 +34,17 @@ Green Text: #44544e;
 body,h1,h2,h3,h4,p,a, li{
 	font-family: ‘Muli’, ‘Lucida Grande’, sans-serif;
 	font-weight: 300;
-	color: #43352f;
+	color: #54372A;
 }
 h1{
-	font-size: 2.5em;
-	color: #44544e;
+	font-size: 3.5em;
+	color: #2A4754;
 }
 h2{
-	font-size: 1.5em;
+	font-size: 2.5em;
+}
+h3{
+	font-size: 2em;
 }
 
 h2,h3,h4{
@@ -62,37 +67,51 @@ p{
 
 a{
 	text-decoration: none;
-	color: #43352f;
+	color: #54372A;
 	outline: none;
 }
 
 a:hover {
-
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #765581;
+	color: #BF4324;
 	text-decoration: none;
 	outline: none;
 }
+a:hover > h3{
+	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	color: #BF4324;
+}
+a:hover > h2{
+	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	color: #BF4324;
+}
+a:hover > div{
+	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	color: #BF4324;
+}
+
 a:focus, a:active{
 	color: #44544e;
 	outline: none;
 }
 a:visited{
 	text-decoration: none;
-}
-div:focus, div:active{
-	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #765581;
-	border: 0;
-	outline: none;
 }
 
 .main{
@@ -103,6 +122,14 @@ div:focus, div:active{
 #container{
 	width: 100%;
 	height: inherit;
+}
+/***** Animate ***/
+.slow_trans{
+	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 }
 
 /****** util ******/ 
