--- a/lla_style.css
+++ b/lla_style.css
@@ -150,6 +150,7 @@ a.image-hover :hover .hover-image{
 .hover-image{
 	opacity: 0;
 	width: 100%;
+	height: 100%;
 	position: absolute;
 	top: -10%;
 	left: -10%;
@@ -524,5 +525,6 @@ form button{
 	}		
 }
 .hover-image > img{
-	width: 80%;
+	width: auto;
+	height: 70%;
 }
