--- a/lla_style.css
+++ b/lla_style.css
@@ -12,22 +12,16 @@ Domain Path: /languages/
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
-
-
 Color Codes 
 Brown Text: #54372A;
 Mint text: #2A4754
 orange
 	color: #BF4324;
 */
-
 /* Inital css for the index.html for lifeline arts */
-
 /**********************************************************************/
-
 						/* General*/
 		/**********************************************/
-
 * {
 	box-sizing: initial;
 }
@@ -46,7 +40,6 @@ h2{
 h3{
 	font-size: 2em;
 }
-
 h2,h3,h4{
 	text-transform: lowercase;
 }
@@ -64,13 +57,11 @@ body{
 p{
 	font-size: 12px;
 }
-
 a{
 	text-decoration: none;
 	color: #54372A;
 	outline: none;
 }
-
 a:hover {
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -105,7 +96,6 @@ a:hover > div{
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	color: #BF4324;
 }
-
 a:focus, a:active{
 	color: #44544e;
 	outline: none;
@@ -113,12 +103,13 @@ a:focus, a:active{
 a:visited{
 	text-decoration: none;
 }
-
+li {
+	list-style-type: none;
+}
 .main{
 	width: 100%;
 	height: inherit;
 }
-
 #container{
 	width: 100%;
 	height: inherit;
