--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: lla
-Theme URI: www.lifelinearts.com
+Theme URI: https://lifelinearts-lifelinearts.rhcloud.com
 Author: benjamin.cerigo@gmail.com
 Author URI: benjamin.cerigo.wordpresss.com 
 Description: Horizontial Theme Developed for Lifeline Arts
@@ -18,4 +18,6 @@ Color Codes
 Brown Text: #43352f;
 Green Text: #44544e;
 */
+.nothing{
+}
 
