--- a/lla_style.css
+++ b/lla_style.css
@@ -137,6 +137,9 @@ li {
 a.image-hover :hover .hover-image{
 	opacity: 0.4;
 }
+a.text-hover :hover .inner-text{
+	opacity: 0.4;
+}
 
 .hover-image{
 	opacity: 0;
@@ -152,6 +155,17 @@ a.image-hover :hover .hover-image{
 	display: block;
 	height: 100%;
 }
+.inner-text{
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 50%;
+	left: 0%;
+	z-index: 2;
+	text-align:center;
+}
+
 .no-padding{
 	padding: 0;
 }
@@ -476,6 +490,11 @@ form button{
 	height: 3px;
 	border-radius: 5px;
 	bottom: 7px;
+}
+
+/**************** gallery *****************/
+.gallery img{
+	height: 100%;
 }
 
 
