--- a/lla_style.css
+++ b/lla_style.css
@@ -46,11 +46,8 @@ h2,h3,h4{
 html{
 	height: 100%;
 }
-.homewidth{
-	width: 380%;
-}
 body{
-	height: inherit;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	overflow-y: hidden;
@@ -110,11 +107,12 @@ li {
 }
 .main{
 	width: 100%;
-	height: inherit;
+	height: 100%;
+	white-space: nowrap;
 }
 #container{
 	width: 100%;
-	height: inherit;
+	height: 100%;
 }
 
 /****** util ******/ 
@@ -162,7 +160,7 @@ a.text-hover :hover .inner-text{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	top: 50%;
+	top: 0%;
 	left: 0%;
 	z-index: 2;
 	text-align:center;
@@ -222,11 +220,11 @@ height: 0px;
 /****** Sections ******/
 
 .section{
-	margin-top: 1%;
-	height: 98%;
-	width:25%;
-	position: relative;
-	float:left;
+	box-sizing:border-box;
+	margin-top: 2%;
+	height: 100%;
+	width:95%;
+	display: inline-block;
 	
 
 }
@@ -236,11 +234,12 @@ height: 0px;
 	margin-top: 1%;
 }
 .part{
+	box-sizing: border-box;
 	float:left;
 }
 
 .part-top-padding{
-	padding-top: 4%;
+	padding-top: 10%;
 }
 
 .part-lg-q{
