--- a/lla_style.css
+++ b/lla_style.css
@@ -61,6 +61,10 @@ a{
 	color: #54372A;
 	outline: none;
 }
+div {
+	outline:none
+}
+
 a:hover {
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -71,7 +75,7 @@ a:hover {
 	text-decoration: none;
 	outline: none;
 }
-a:hover > h3{
+a:hover  h3{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-moz-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -158,7 +162,6 @@ a.text-hover :hover .inner-text{
 .inner-text{
 	opacity: 0;
 	width: 100%;
-	height: 100%;
 	position: absolute;
 	top: 0%;
 	left: 0%;
@@ -170,11 +173,34 @@ a.text-hover :hover .inner-text{
 	padding: 0;
 }
 
+
+button.close {
+	padding-right: 20px;
+}
 .hundered{
 	height: 100%;
 }
+.part .innercontent {
+	height: 100%;
+	display: table-cell; 
+	vertical-align: middle; 
+	text-align: justify; 
+	white-space: normal;
+	overflow-y:scroll;
+}
+.part .outercontent {
+	width: 95%;
+	height: 100%;
+	display: table; 
+}
+ul.nomargin {
+	padding: 0;
+}
+.content-padding > * {
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
 /************************* ING SIZE **********/
-
 .thumbnail-lg{
 	width:60%;
 }
@@ -436,6 +462,9 @@ height: 0px;
 
 
 
+#calender ul{
+	margin-top: 0px;
+}
 
 
 /**********************************************************************/
@@ -553,4 +582,10 @@ form button{
 .hover-image > img{
 	width: auto;
 	height: 70%;
+}
+.scrolltonull{
+	position: fixed;
+	margin-left:1%;
+	margin-top: 1%;
+	font-size: 2em;
 }
