Fix of font color

--- a/lla_style.css
+++ b/lla_style.css
@@ -17,6 +17,7 @@ Brown Text: #A53300;
 Mint text: #2A4754
 orange
 	color: #BF4324;
+	morag: #9C4020;
 
 	color try outs 
 	blu: #0072A5
@@ -35,15 +36,15 @@ body,h1,h2,h3,h4,p,a, li{
 }
 h1{
 	font-size: 3.5em;
-	color: #0072A5;
+	color:#878E92;
 }
 h2{
 	font-size: 2.5em;
-	color: #A53300;
+	color: #494250;
 }
 h3{
 	font-size: 2em;
-	color: #A53300;
+	color: #494250;
 }
 h2,h3,h4{
 	text-transform: lowercase;
@@ -60,12 +61,17 @@ body{
 	background-image: url('./img/BrownOp_pink.jpg');
 }
 p{
-	font-size: 12px;
-	color: rgb(5, 60, 84);
+	font-size: 16px;
+	color: #494250;
+}
+li{
+	font-size: 16px;
+	list-style-type: none;
+	color: #494250;
 }
 a{
 	text-decoration: none;
-	color: rgb(5, 60, 84);
+	color:#8D8D8D;
 	outline: none;
 }
 div {
@@ -78,7 +84,7 @@ a:hover {
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #BF4324;
+	color: #9C4020;
 	text-decoration: none;
 	outline: none;
 }
@@ -88,7 +94,7 @@ a:hover  h3{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #BF4324;
+	color: #9C4020;
 }
 a:hover > h2{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -96,7 +102,7 @@ a:hover > h2{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #BF4324;
+	color: #9C4020;
 }
 a:hover > div{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -104,18 +110,14 @@ a:hover > div{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #BF4324;
+	color: #9C4020;
 }
 a:focus, a:active{
-	color: #44544e;
+	color:#8D8D8D;
 	outline: none;
 }
 a:visited{
 	text-decoration: none;
-}
-li {
-	list-style-type: none;
-	color: rgb(5, 60, 84);
 }
 .main{
 	width: 100%;
@@ -389,6 +391,7 @@ height: 0px;
 	height: 20px;
 	z-index: 100;
 	position: relative;
+	color: #878E92;
 }
 
 
