--- a/lla_style.css
+++ b/lla_style.css
@@ -18,6 +18,7 @@ Mint text: #2A4754
 orange
 	color: #BF4324;
 	morag: #9C4020;
+	from line:#853C3D; 
 
 	color try outs 
 	blu: #0072A5
@@ -84,7 +85,7 @@ a:hover {
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #9C4020;
+	color: #853C3D;
 	text-decoration: none;
 	outline: none;
 }
@@ -94,7 +95,7 @@ a:hover  h3{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #9C4020;
+	color: #853C3D;
 }
 a:hover > h2{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -102,7 +103,7 @@ a:hover > h2{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #9C4020;
+	color: #853C3D;
 }
 a:hover > div{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -110,7 +111,7 @@ a:hover > div{
 	-ms-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-	color: #9C4020;
+	color: #853C3D;
 }
 a:focus, a:active{
 	color:#8D8D8D;
@@ -271,7 +272,7 @@ height: 0px;
 	box-sizing:border-box;
 	margin-top: 2%;
 	height: 100%;
-	width:95%;
+	width:100%;
 	display: inline-block;
 	
 
@@ -322,7 +323,7 @@ height: 0px;
 	padding-left: 2%;
 }
 .part-mpleft{
-	padding-left: 10%;
+	padding-left: 5%;
 }
 .part-lg--t {
 	height:30%;
@@ -402,7 +403,6 @@ height: 0px;
 		/**********************************************/
 
 .website-title{
-	padding-left: 6%;
 	padding-top: 5%;
 }
 
@@ -567,6 +567,9 @@ form button{
 .verticalmiddle{
 	vertical-align: middle;
 }
+.verticalbaseline{
+	vertical-align: baseline;
+}
 
 
 /***** Animate ***/
@@ -612,5 +615,5 @@ form button{
 	margin-left:1%;
 	margin-top: 1%;
 	font-size: 2em;
-	color: #0072A5;
+	color: #000;
 }
