Add of the animations on change

--- a/lla_style.css
+++ b/lla_style.css
@@ -32,7 +32,7 @@ orange
 	box-sizing: initial;
 }
 body,h1,h2,h3,h4,p,a, li{
-	font-family: 'Muli', 'Lucida Grande', sans-serif;
+	font-family:  'Lucida Grande', sans-serif;
 	font-weight: 300;
 }
 h1{
