--- a/lla_style.css
+++ b/lla_style.css
@@ -211,6 +211,14 @@ ul.nomargin {
 	margin-top: 40px;
 	margin-bottom: 20px;
 }
+a.actiontext {
+	color: #853C3D;
+}
+
+a.actiontext:focus, a.actiontext:active{
+	color: #494250;
+	outline: none;
+}
 /************************* ING SIZE **********/
 .thumbnail-lg{
 	width:60%;
@@ -293,6 +301,9 @@ height: 0px;
 
 .part-lg-10{
 	width:10%;
+}
+.part-lg-20{
+	width:20%;
 }
 .part-lg-q{
 	width:25%;
@@ -562,6 +573,12 @@ form button{
 .gallery > .part{
 	padding: 5%;
 }
+.gallery > .part:first-child{
+	padding-left: 0;
+}
+.gallery > .part:first-child .part{
+	padding-left: 0;
+}
 .gallery .part{
 	box-sizing: border-box;
 	display: inline-block;
@@ -572,6 +589,14 @@ form button{
 }
 .verticalbaseline{
 	vertical-align: baseline;
+}
+.verticalbottom{
+	vertical-align: bottom;
+}
+.helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
 }
 
 
