--- a/lla_style.css
+++ b/lla_style.css
@@ -57,9 +57,11 @@ body{
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	overflow-y: hidden;
 	overflow-x: hidden;
 	background-image: url('./img/BrownOp_pink.jpg');
+}
+.y-overflow {
+	overflow-y: hidden;
 }
 p{
 	font-size: 16px;
@@ -356,6 +358,9 @@ height: 0px;
 	width:33%;
 }
 
+.part-lg--title{
+	height: 100px;
+}
 .part-lg--40{
 	height: 40%;
 }
