--- a/lla_style.css
+++ b/lla_style.css
@@ -134,6 +134,12 @@ a:visited{
 
 /****** util ******/ 
 
+.nullfont{
+    font-size: 0;
+}
+.normalfont{
+    font-size: 1rem;
+}
 .white-space-normal{
 	white-space: normal;
 }
@@ -331,6 +337,9 @@ height: 0px;
 	padding-bottom: 2%;
 }
 
+.part-lg-so{
+	width:2% !important;
+}
 .part-lg-10{
 	width:10%;
 }
