--- a/lla_style.css
+++ b/lla_style.css
@@ -47,6 +47,10 @@ h3{
 	font-size: 2em;
 	color: #494250;
 }
+h4{
+	font-size: 1.8em;
+	color: #494250;
+}
 h2,h3,h4{
 	text-transform: lowercase;
 }
@@ -98,6 +102,7 @@ a:hover  h3{
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	color: #853C3D;
+	text-decoration: none;
 }
 a:hover > h2{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -106,6 +111,7 @@ a:hover > h2{
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	color: #853C3D;
+	text-decoration: none;
 }
 a:hover > div{
 	-webkit-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
@@ -114,10 +120,12 @@ a:hover > div{
 	-o-transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	transition: 725ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
 	color: #853C3D;
+	text-decoration: none;
 }
 a:focus, a:active{
 	color:#8D8D8D;
 	outline: none;
+	text-decoration: none;
 }
 a:visited{
 	text-decoration: none;
@@ -132,10 +140,18 @@ a:visited{
 	height: 100%;
 }
 
+b, strong{
+    font-weight: 400;
+	color:#8D8D8D;
+}
+
 /****** util ******/ 
 
 .nullfont{
     font-size: 0;
+}
+ul.font-mid > li{
+    font-size: 23px;
 }
 .normalfont{
     font-size: 1rem;
@@ -198,6 +214,7 @@ a.text-hover :hover .inner-text{
 
 button.close {
 	padding-right: 20px;
+    padding-top: 10px;
 }
 .hundered{
 	height: 100%;
@@ -208,6 +225,7 @@ button.close {
 	vertical-align: middle; 
 	white-space: normal;
 	overflow-y:hidden;
+	padding-top: 2%;
 }
 .part .outercontent {
 	width: 95%;
@@ -250,7 +268,7 @@ img.loadinghome{ padding-top: 10%; width:80px}
 	background-image: url( ./img/paper-white.png);
 	background-repeat:no-repeat;
 	background-size: 100% 100%;
-	opacity: 0.9;
+	opacity: 1;
 }
 .paper-effect-border{
 	border-style: solid;
@@ -259,7 +277,7 @@ img.loadinghome{ padding-top: 10%; width:80px}
 	-moz-border-image:url(./img/paper-white.png) 20 20 20 20 repeat;
 	border-image:url(./img/paper-white.png) 20 20 20 20 repeat;
 	padding: 0;
-	opacity: 0.9;
+	opacity: 1;
 }
 .paper-effect-border-img{
 	border-style: solid;
@@ -268,11 +286,11 @@ img.loadinghome{ padding-top: 10%; width:80px}
 	-moz-border-image:url(./img/paper-white.png) 20 20 20 20 repeat;
 	border-image:url(./img/paper-white.png) 20 20 20 20 repeat;
 	padding: 0;
-	opacity: 0.9;
+	opacity: 1;
 }
 .paper-inner{
-	background-color: #e9e5e2;
-	opacity: 0.9;
+	background-color: #fff;
+	opacity: 1;
 }
 
 /*********************** Animations ****************/
@@ -309,7 +327,7 @@ height: 0px;
 
 .section{
 	box-sizing:border-box;
-	margin-top: 2%;
+	margin-top: 3%;
 	height: 100%;
 	width:100%;
 	display: inline-block;
@@ -347,17 +365,18 @@ height: 0px;
 .part-lg-20{
 	width:20%;
 }
-.part-lg-q{
+.part-lg-11{
 	width:25%;
 }
-
 .part-lg-45{
 	width:45%;
 }
 .part-lg-h{
 	width:50%;
 }
-
+.part-lg-q{
+	width:25%;
+}
 .part-lg-f{
 	width:100%;
 }
@@ -367,9 +386,11 @@ height: 0px;
 .part-lg-33{
 	width:33%;
 }
-
 .part-lg--title{
 	height: 100px;
+}
+.part-lg--20{
+	height: 20%;
 }
 .part-lg--40{
 	height: 40%;
@@ -377,14 +398,20 @@ height: 0px;
 .part-lg--h{
 	height: 50%;
 }
-.part-lg--f{
-	height: 100%;
+.part-lg--60{
+	height: 60%;
+}
+.part-lg--70{
+	height: 70%;
 }
 .part-lg--a{
 	height: 85%;
 }
 .part-lg--80{
 	height: 80%;
+}
+.part-lg--f{
+	height: 100%;
 }
 
 .part-spleft{
@@ -405,7 +432,7 @@ height: 0px;
 }
 
 .part img{
-	opacity: 0.9;
+	opacity: 1;
 }
 
 /************* LIne ******/
@@ -418,8 +445,9 @@ height: 0px;
 }
 .line img{
 	position: relative;
-	top: 3%;
+	top: 12%;
 	height: 80%;
+    left: -29%;
 }
 
 
@@ -460,7 +488,7 @@ height: 0px;
 	height: 20px;
 	z-index: 100;
 	position: relative;
-	color: #878E92;
+    color: #4D768D;
 }
 
 
@@ -472,6 +500,7 @@ height: 0px;
 
 .website-title{
 	padding-top: 5%;
+    color: #4D768D;
 }
 
 .website-title-rel{
@@ -485,7 +514,10 @@ height: 0px;
 	right: 60%;
 	top: 30%;
 }
-
+#quotes{
+    margin-top: 30px;
+    font-size: 1.6em;
+}
 
 
 
@@ -561,6 +593,7 @@ height: 0px;
 .contact-info{
 	position: relative;
 	top: 30%;
+    font-size: 23px;
 }
 .contact-info li{
 	list-style-type: none;
@@ -641,7 +674,7 @@ form button{
 }
 .gallery > .part{
 	padding-left: 15%;
-	padding-right: 15%;
+	padding-right: 5%;
 	padding-bottom: 2.5%;
 	padding-top: 2.5%;
 }
