Add of the styl

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://lifelinearts-lifelinearts.rhcloud.com
 Author: benjamin.cerigo@gmail.com
 Author URI: benjamin.cerigo.wordpresss.com 
 Description: Horizontial Theme Developed for Lifeline Arts
-Version: 1.0-wpcom
+Version: 2.0.0-lla
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: lifelinearts
